--- a/package.json
+++ b/package.json
@@ -11,6 +11,8 @@
 		"@neoconfetti/svelte": "^1.0.0",
 		"@sveltejs/adapter-auto": "^2.0.0",
 		"@sveltejs/kit": "^1.20.4",
+		"flowbite": "^1.8.1",
+		"flowbite-svelte": "^0.44.18",
 		"svelte": "^4.0.5",
 		"tailwindcss": "^3.3.3",
 		"vite": "^4.4.2"
