--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
 		"@sveltejs/kit": "^1.20.4",
 		"flowbite": "^1.8.1",
 		"flowbite-svelte": "^0.44.18",
+		"flowbite-svelte-icons": "^0.4.4",
 		"svelte": "^4.0.5",
 		"tailwindcss": "^3.3.3",
 		"vite": "^4.4.2"
